updated character database, updated battle phase to work with objects from json.

--- a/app/assets/javascripts/inventoryState.js.erb
+++ b/app/assets/javascripts/inventoryState.js.erb
@@ -15,6 +15,7 @@ var inventoryState = {
   },
 
   create: function(){
+    game.cache.destroy();
 
     console.log(game.cache.nextGameState);
     console.log(game.cache.currentGameState);
