--- a/app/assets/javascripts/dungeonTwoState.js.erb
+++ b/app/assets/javascripts/dungeonTwoState.js.erb
@@ -6,9 +6,13 @@ var backgroundLayer;
 var blockedLayer;
 var objectLayer;
 
+var randItem;
+var itemListLength;
+
 var gameObjects = [];
 
 var inventory;
+var confirmationButton;
 
 var charInventory = [];
 
@@ -42,6 +46,8 @@ var dungeonTwoState = {
 
     inventory = game.input.keyboard.addKey(Phaser.Keyboard.Z);
     inventory.onDown.add(changeInventoryState, this);
+
+    confirmationButton = game.input.keyboard.addKey(Phaser.Keyboard.X);
 
     doors = game.add.group();
     enemySpawns = game.add.group();
@@ -80,7 +86,7 @@ var dungeonTwoState = {
   },
   update: function(){
     game.physics.arcade.collide(blockedLayer,character.player);
-    game.physics.arcade.collide(chests,character.player);
+    game.physics.arcade.overlap(chests,character.player,openChest, null, this);
     game.physics.arcade.overlap(doors, character.player, changeWorldState, null, this);
     game.physics.arcade.overlap(enemySpawns, character.player, changeBattleState, null, this);
 
@@ -112,4 +118,27 @@ var changeWorldState = function(doors, player){
 var changeInventoryState = function(){
   game.cache.nextGameState = 'inventoryState';
   game.state.start('inventoryState');
+}
+
+var openChest = function(player, chest){
+  if(confirmationButton.isDown){
+    chest.kill();
+    console.log(chest.isDestroyed);
+    chest.isDestroyed = true;
+    removedChests.push(chest);
+    chests.remove(chest);
+    console.log(chests);
+    // // itemListLength = game.cache.gameItems.length;
+    // // randItem = Math.floor(Math.random() * itemListLength)
+
+    // // charInventory.push(game.cache.gameItems[randItem]);
+    itemListLength = game.cache.gameItems.length;
+    randItem = Math.floor(Math.random() * itemListLength)
+
+    charInventory.push(game.cache.gameItems[randItem].itemName);
+
+    game.cache.charInventory = charInventory;
+
+    console.log("tried to open");
+  }
 }
